# Rust-Design-Pattern

./: README.md
design_pattern/: Cargo.toml  README.md
design_pattern/adapter/src/: main.rs
design_pattern/adapter/src/lib/: mod.rs
design_pattern/bridge/src/: lib.rs  main.rs
design_pattern/builder/src/: main.rs
design_pattern/builder/src/lib/: flex_builder.rs  mod.rs  simple_builder.rs
design_pattern/builder/src/tests/: flex_builder_test.rs  mod.rs  simple_builder_test.rs
design_pattern/chain/: Cargo.toml
design_pattern/chain/src/: lib.rs  main.rs
design_pattern/command/src/: lib.rs  main.rs
design_pattern/composite/src/: lib.rs  main.rs
design_pattern/decorator/src/: lib.rs  main.rs
design_pattern/facade/src/: lib.rs  main.rs
design_pattern/factory/src/: main.rs
design_pattern/factory/src/lib/: abstract_factory.rs  factory_method.rs  mod.rs  simple_factory.rs
design_pattern/filter/src/: lib.rs  main.rs
design_pattern/flyweight/src/: lib.rs  main.rs
design_pattern/interpreter/src/: lib.rs  main.rs
design_pattern/iter/src/: impl_iter.rs  lib.rs  main.rs
design_pattern/mediator/src/: lib.rs  main.rs
design_pattern/memento/src/: lib.rs  main.rs
design_pattern/null/: Cargo.toml
design_pattern/null/src/: main.rs
design_pattern/observer/src/: lib.rs  main.rs
design_pattern/prototype/src/: main.rs
design_pattern/proxy/src/: lib.rs  main.rs
design_pattern/singleton/src/: main.rs
design_pattern/strategy/src/: lib.rs  main.rs
design_pattern/template/src/: lib.rs  main.rs
design_pattern/visitor/src/: lib.rs  main.rs
(+36 files in other folders)
